update swagger spec and generated code files server/client
